--- a/app/sass/_metroui.sass
+++ b/app/sass/_metroui.sass
@@ -32,7 +32,6 @@ $max-box-height: 2
       .box-content
         height: percentage( $i )
         padding-bottom: ( $i - 1 ) * $gutter
-        transform: translatez(0)
 
   @for $i from 1 through $size - 1
     .offset-#{$i}
